--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,35 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="google_map_api_key">AIzaSyAjRqNVxHEna63-0Vyd2niWxsCtJpB3sUI</string>
+
+    <string name="manufacture_details">HINDUSTAN COCA-COLA BEVERAGES PVT. LTD. , SURVEY NO. 284-P, POST KUDUS, TALUKA WADA, DISTRICT PALGHAR- 421 312, MAHARASHTRA</string>
+
+    <string name="ingredients">Carbonated Water, Sugar, Acidity Regulator (338), Caffeine, Colour (150d). Contains Permitted Natural Colour &amp; Added Flavours (Natural, Nature Identical Artificial Flavouring Substances), Contains no Fruit</string>
+
+    <string name="disclaimer">Every effort is made to maintain the accuracy of all information. However, actual product packaging and materials may contain more and/or different information. It is recommended not to solely rely on the information presented.</string>
+
+    <string name="cancellation_policy">As a user, you may cancel an order placed by you before the order enters the “billed” stage. For any permitted cancellations, we will initiate a refund, if any, made by you under the relevant order within approximately 48-72 hours.</string>
+
+    <string name="address">En-35, Walzen Building EN-35, 7th Floor, 35, Street Number 8, EN Block, Sector V, Bidhannagar, Kolkata, West Bengal 700091</string>
+
+    <string name="upi_safe">Your UPI ID will be encrypted and is 100% safe with us</string>
+    <string name="paytm_wallet_txt">If you don\'t have a Paytm wallet, it will be created.</string>
+    <string name="mobikwik_wallet_txt">If you don\'t have a Mobikwik wallet, it will be created.</string>
+
+    <string name="content">With the idea of imparting programming
+      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
+      dream, GeeksforGeeks. Whether programming excites you or you feel
+      stifled, wondering how to prepare for interview questions or how to
+      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
+      With every tick of time, we are adding arrows in our quiver. From articles
+      on various computer science subjects to programming problems for practice,
+      from basic to premium courses, from technologies to entrance examinations,
+      we have been building ample content with superior quality. In a short span,
+      we have built a community of 1 Million+ Geeks around the world, 20,000+
+      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
+      Our success stories include a lot of students who benefitted in their placements
+      and landed jobs at tech giants. Our vision is to build a gigantic network of
+      geeks and we are only a fraction of it yet.
+  </string>
+
 </resources>
